@@ -5,7 +5,8 @@
 * updates to use latest Lazydoc
 * added scrub to DelegateHash#to_hash, to remove keys
   set to the default value
-  
+* added strbol validation
+    
 == 0.5.0 / 2009-05-25
 
 * fixed io validation to not duplicate IOs
